[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "extract_rsi"
version = "0.1.0"
description = "RSI acquisition system extraction tool"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "tqdm>=4.65",
    "click>=8.1",
    "scipy>=1.11",
    "matplotlib>=3.7",
]

[project.scripts]
extract-rsi = "extract_rsi.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
